--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body id="background">
     <ul>
         <li>
-            <a href="https://sarahmalinka.github.io/waiting-room.html" id="link1">Waiting room</a>
+            <a href="waiting-room.html" id="link1">Waiting room</a>
         </li>
     </ul>
 </body>
