--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
+<!doctype html><html><head></head><body><!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Index</title>
-    <style>
-        #background {
-            background-color: white;
-        }
-        li {
-            font-size: 25pt;
-        }
-        a {
-            all: unset;
-            color: black;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Index</title>
+	<style>
+		#background {
+			background-color: white;
+		}
+
+		a {
+			all: unset;
+			color: black;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 10vh;
+		}
+	</style>
 </head>
 
 <body id="background">
-    <ul>
-        <li>
-            <a href="waiting-room.html" id="link1">Waiting room</a>
-        </li>
-    </ul>
+	<ul>
+		<li>
+			<a href="waiting-room.html" id="link1">Waiting room</a>
+		</li>
+	</ul>
 </body>
 
-</html>
+</html></body><html>
