--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			all: unset;
 			color: black;
 			font-family: Arial, Helvetica, sans-serif;
-			font-size: 10vh, 10vw;
+			font-size: 10vh;
 		}
 	</style>
 </head>
