--- a/index.html
+++ b/index.html
@@ -2,32 +2,42 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Index</title>
-	<style>
-		#background {
-			background-color: white;
-		}
-		
-		li {
-			font-size: 5vh;
-		}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Index</title>
+    <style>
+        #container {
+            width: 100%;
+            min-height: 100vh;
+            padding: 0%;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
 
-		a {
-			all: unset;
-			color: black;
-			font-family: Arial, Helvetica, sans-serif;
-		}
-	</style>
+        #background {
+            background-color: white;
+        }
+
+        li {
+            font-size: 5vw;
+        }
+
+        a {
+            all: unset;
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 
 <body id="background">
-	<ul>
-		<li>
-			<a href="waiting-room.html" id="link1">Waiting room</a>
-		</li>
-	</ul>
+    <div id="container">
+        <ul>
+            <li>
+                <a href="waiting-room.html" id="link1">Waiting room</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
