--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="container">
         <ul>
             <li>
-                <a href="waiting-room.html" id="link1">Waiting room</a>
+                <a href="waiting-room.html">Waiting room</a>
             </li>
         </ul>
     </div>
